--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,3 +26,14 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Publish
+      run: dotnet publish Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.cspro -c Release -o website
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.3
+      with:
+        name: webapp
+        path: website/**
+        if-no-files-found: warn
+
+      
+
