--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Publish
-      run: dotnet publish Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.cspro -c Release -o website
+      run: dotnet publish Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.csproj -c Release -o website
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.3
       with:
